8215707: [macosx] fix pthread_getschedparam and pthread_setschedparam calls

Reviewed-by: clanger, dholmes